新增: 註冊會員驗證信功能

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -29,8 +29,8 @@
         }
 
         .alert-btn-login {
-            background-color: #DE9E4F !important; /* 自定义按钮颜色 */
-            color: white; /* 按钮文本颜色 */
+            background-color: #DE9E4F !important;
+            color: white; 
         }
     </style>
 
