--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -373,10 +373,10 @@
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        showSuccessMessage("編輯成功", response.message);
+                        showSuccessMessage("編輯成功", "內容已儲存");
                         closeModalAndReloadTable();
                     } else {
-                        showErrorMessage("編輯失敗", response.message);
+                        showErrorMessage("編輯失敗", "請再次確認");
                     }
                 },
                 error: function (error) {
@@ -451,10 +451,10 @@
                     contentType: false,
                     success: function (response) {
                         if (response.success) {
-                            showSuccessMessage("新增成功", response.message);
+                            showSuccessMessage("新增成功", "橫幅已新增");
                             closeModalAndReloadTable();
                         } else {
-                            showErrorMessage("新增失敗", response.message);
+                        showErrorMessage("新增失敗", "請再次確認");
                         }
                     },
                     error: function (error) {
@@ -509,10 +509,10 @@
                                     console.log("項目已成功刪除");
                                     deleteButton.closest("tr").remove();
                                     $('#Banner-table').DataTable().ajax.reload();
-                                    showSuccessMessage("刪除成功", response.message);
+                                    showSuccessMessage("刪除成功", "橫幅已刪除");
                                 } else {
                                     console.log("刪除項目失敗。");
-                                    showErrorMessage("刪除失敗", response.message);
+                                    showErrorMessage("刪除失敗", "請再次確認");
                                 }
                             },
                             error: function (error) {
