--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -305,7 +305,7 @@
                 {
                     "data": "couponId",
                     "render": function (data, type, row) {
-                        return `<button class="btn btn-primary send-button" data-bs-toggle="modal" data-bs-target="#sendtoMember" data-id="${row.couponId}">發送</button>`
+                        return `<button class="btn btn-primary send-button" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#sendtoMember" >發送</button>`
                     }
                 },
                 {
@@ -386,10 +386,10 @@
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        showSuccessMessage("編輯成功", response.message);
+                        showSuccessMessage("編輯成功", "內容已儲存");
                         closeModalAndReloadTable();
                     } else {
-                        showErrorMessage("編輯失敗", response.message);
+                        showErrorMessage("編輯失敗", "請再次確認");
                     }
                 },
                 error: function (error) {
@@ -447,7 +447,7 @@
                         Swal.fire({
                             icon: 'success',
                             title: '新增成功',
-                            text: response.message
+                            text: '優惠券已新增'
                         });
 
                         $('#addModalToggle').modal('hide');
@@ -457,7 +457,7 @@
                         Swal.fire({
                             icon: 'error',
                             title: '失敗',
-                            text: response.message
+                            text: '新增失敗'
                         });
                     }
                 },
@@ -523,11 +523,18 @@
             });
         });
 
-        //發送至所有會員=======================
+
+        // 發送按鈕
+        var couponIdToSend;
+        $('#Bonus-table').on('click', '.send-button', function () {
+            couponIdToSend = $(this).data('id');
+            $('#sendtoMember').modal('show');
+        });
+
+        // 發送至所有會員=======================
         $(document).ready(function () {
-        $(document).on('click', '#SendCouponToAllMembers', function () {
-                var couponId = $(this).closest('tr').find('.send-button').data('id');
-                console.log("couponId:", couponId);
+            $(document).on('click', '#SendCouponToAllMembers', function () {
+                console.log("couponId:", couponIdToSend);
 
                 Swal.fire({
                     title: '確定要發送優惠券嗎?',
@@ -541,10 +548,15 @@
                         $.ajax({
                             url: "/AdminCMS/Bonus/SendCouponToMembers",
                             type: "POST",
-                            data: { id: couponId },
+                            data: { id: couponIdToSend },
                             success: function (response) {
                                 if (response.success) {
                                     console.log("發送成功");
+                                    Swal.fire({
+                                        title: '發送成功',
+                                        text: '優惠券已成功發送',
+                                        icon: 'success',
+                                    });
                                     $('#sendtoMember').modal('hide');
                                 } else {
                                     console.log("發送失敗");
@@ -558,38 +570,52 @@
                 });
             });
         });
-        //發送至會員-依MemberID
-        $(document).ready(function () {
-        $(document).on('click', '#SendToMemberByID', function () {
-                var couponId = $(this).closest('tr').find('.send-button').data('id');
-                var memberId = $("#send-memberID").val(); // 獲取輸入的 MemberId
-            console.log("couponId:", couponId);
-            console.log("memberId:", memberId);
 
-                Swal.fire({
-                    title: '確定要發送優惠券嗎?',
-                    icon: 'warning',
-                    showCancelButton: true,
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: '確認發送'
-                }).then((result) => {
-                    if (result.isConfirmed) {
-                        $.ajax({
-                            url: "/AdminCMS/Bonus/SendCouponToMembersByID",
-                            type: "POST",
-                            data: { id: couponId, memberId: memberId }, // 傳遞 MemberId 到後端
-                            success: function (response) {
-                                if (response.success) {
-                                    console.log("發送成功");
-                                    $('#sendtoMember').modal('hide');
-                                } else {
-                                    console.log("發送失敗");
-                                }
-                            },
-                            error: function (error) {
-                                console.log("發生錯誤：", error);
-                            }
+        // 發送至會員-依MemberID
+        $(document).ready(function () {
+            $(document).on('click', '#SendToMemberByID', function () {
+                var memberId = $("#send-memberID").val();
+                console.log("couponId:", couponIdToSend);
+                console.log("memberId:", memberId);
+
+                // 檢查 memberId 是否為空值或不是整數
+                if (!memberId || isNaN(parseInt(memberId))) {
+                    Swal.fire({
+                        title: '請輸入有效的會員ID',
+                        icon: 'error',
+                    });
+                    return;
+                }
+
+                // 透過 AJAX 向後端檢查會員是否存在
+                $.ajax({
+                    url: "/AdminCMS/Bonus/SendCouponToMembersByID",
+                    type: "POST",
+                    data: { id: couponIdToSend, memberId: memberId },
+                    success: function (response) {
+                        if (response.success) {
+                            console.log("發送成功");
+                            Swal.fire({
+                                title: '發送成功',
+                                text: '優惠券已成功發送',
+                                icon: 'success',
+                            });
+                            $('#sendtoMember').modal('hide');
+                        } else {
+                            console.log("發送失敗");
+                            Swal.fire({
+                                title: '發送失敗',
+                                text: response.message,
+                                icon: 'error',
+                            });
+                        }
+                    },
+                    error: function (error) {
+                        console.log("發生錯誤：", error);
+                        Swal.fire({
+                            title: '發生錯誤',
+                            text: '發生錯誤，請重試',
+                            icon: 'error',
                         });
                     }
                 });
