--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -494,6 +494,25 @@
             var fileInput = $('#editimage')[0];
             var file = fileInput.files[0];
 
+            //驗證非空值
+            if (!ProductName || !ProductDescription || !ProductPrice) {
+                showErrorMessage("錯誤", "名稱、類別、價格為必填欄位，請再次檢查。");
+                return;
+            }
+
+            // 驗證必為數字
+            if (!isNumeric(ProductPrice) || !isNumeric(PurchasedQuantity) || !isNumeric(RemainingQuantity) || !isDecimal(LotteryProbability)) {
+                showErrorMessage("錯誤", "已被購買數量、剩餘數量、抽獎機率僅可輸入數字，請再次檢查。");
+                return;
+            }
+
+            function isNumeric(value) {
+                return /^\d+$/.test(value);
+            }
+            function isDecimal(value) {
+                return /^(\d+\.\d+|\.\d+|\d+)$/.test(value);
+            }
+
             var formData = new FormData();
             formData.append("ProductId", ProductId);
             formData.append("Productname", ProductName);
@@ -515,10 +534,10 @@
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        showSuccessMessage("編輯成功", response.message);
+                        showSuccessMessage("編輯成功", "內容已儲存");
                         closeModalAndReloadTable();
                     } else {
-                        showErrorMessage("編輯失敗", response.message);
+                        showErrorMessage("編輯失敗", "請再次檢查");
                     }
                 },
                 error: function (error) {
@@ -580,15 +599,25 @@
             var fileInput = $('#create_image')[0];
             var file = fileInput.files[0];
 
-            // 檢查必填欄位是否有值
-            // if (!ProductId || !ProductName || !ProductDescription || !ProductCategory || !ProductPrice || !PurchasedQuantity || !RemainingQuantity || !LotteryProbability || !ProductImage) {
-            //     Swal.fire({
-            //         icon: 'error',
-            //         title: '錯誤',
-            //         text: '請填寫所有必填欄位。'
-            //     });
-            //     return; // 不執行後續動作
-            // }
+            //驗證非空值
+            if (!ProductName || !ProductDescription || !ProductPrice) {
+                showErrorMessage("錯誤", "名稱、類別、價格為必填欄位，請再次檢查。");
+                return;
+            }
+
+            // 驗證必為數字
+            if (!isNumeric(ProductPrice) || !isNumeric(PurchasedQuantity) || !isNumeric(RemainingQuantity) || !isDecimal(LotteryProbability)) {
+                showErrorMessage("錯誤", "已被購買數量、剩餘數量、抽獎機率僅可輸入數字，請再次檢查。");
+                return;
+            }
+
+            function isNumeric(value) {
+                return /^\d+$/.test(value);
+            }
+            function isDecimal(value) {
+                return /^(\d+\.\d+|\.\d+|\d+)$/.test(value);
+            }
+
 
             var formData = new FormData();
             formData.append("ProductId", ProductId);
@@ -612,10 +641,10 @@
                 contentType: false,
                 success: function (response) {
                     if (response.success) {
-                        showSuccessMessage("新增成功", response.message);
+                        showSuccessMessage("新增成功", "商品已新增");
                         closeModalAndReloadTable();
                     } else {
-                        showErrorMessage("新增失敗", response.message);
+                        showErrorMessage("新增失敗", "請再次檢查");
                     }
                 },
                 error: function (error) {
@@ -671,10 +700,10 @@
                                     console.log("項目已成功刪除");
                                     deleteButton.closest("tr").remove();
                                     $('#GProduct-table').DataTable().ajax.reload();
-                                    showSuccessMessage("刪除成功", response.message);
+                                    showSuccessMessage("刪除成功", "所選商品已刪除");
                                 } else {
                                     console.log("刪除項目失敗。");
-                                    showErrorMessage("刪除失敗", response.message);
+                                    showErrorMessage("刪除失敗", "請再次確認");
                                 }
                             },
                             error: function (error) {
